Se agrega boton y vista de mediciones, todo funcionando

--- a/app-dam/src/frontend/dam/src/app/dispositivo/dispositivo.page.html
+++ b/app-dam/src/frontend/dam/src/app/dispositivo/dispositivo.page.html
@@ -19,5 +19,9 @@
     <ion-button expand="block" color="danger" (click)="cambiarEstadoValvula(false)">
       Cerrar Válvula
     </ion-button>
+    <ion-button expand="block" (click)="verMediciones()">
+      Ver Mediciones
+    </ion-button>
+    
   </div>
 </ion-content>
