Boton Abrir/Cerrar Valvulas implementadas y funcionando

--- a/app-dam/src/frontend/dam/src/app/dispositivo/dispositivo.page.html
+++ b/app-dam/src/frontend/dam/src/app/dispositivo/dispositivo.page.html
@@ -22,6 +22,11 @@
     <ion-button expand="block" (click)="verMediciones()">
       Ver Mediciones
     </ion-button>
-    
+    <ion-button expand="full" color="success" (click)="abrirValvula()">
+      Abrir Válvula
+    </ion-button>
+    <ion-button expand="full" color="danger" (click)="cerrarValvula()">
+      Cerrar Válvula
+    </ion-button>
   </div>
 </ion-content>
