--- a/app-dam/src/frontend/dam/src/app/home/home.page.html
+++ b/app-dam/src/frontend/dam/src/app/home/home.page.html
@@ -1,16 +1,28 @@
-<ion-header [translucent]="true">
+<ion-content>
+  <ion-header collapse="condense">
   <ion-toolbar>
     <ion-title>Dispositivos</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-list>
-    <ion-card *ngFor="let dispositivo of dispositivos" (click)="verDetalle(dispositivo.dispositivoId)">
-      <ion-card-header>
-        <ion-card-title>{{ dispositivo.nombre }}</ion-card-title>
-        <ion-card-subtitle>{{ dispositivo.ubicacion }}</ion-card-subtitle>
-      </ion-card-header>
-    </ion-card>
-  </ion-list>
+<ion-list>
+  <ion-item *ngFor="let dispositivo of dispositivos">
+    <ion-label>
+      <h2>{{ dispositivo.nombre }}</h2>
+      <p>{{ dispositivo.ubicacion }}</p>
+    </ion-label>
+
+    <!-- Botón para mostrar mediciones -->
+    <ion-button expand="block" color="tertiary" (click)="verMediciones(dispositivo.dispositivoId)">
+      Mostrar Mediciones
+    </ion-button>
+
+    <!-- Botón para ver detalles -->
+    <ion-button fill="outline" slot="end" (click)="verDetalle(dispositivo.dispositivoId)">
+      Ver Detalles
+    </ion-button>
+  </ion-item>
+</ion-list>
+
 </ion-content>
+
