--- a/app-dam/src/frontend/dam/src/app/dispositivo/dispositivo.page.html
+++ b/app-dam/src/frontend/dam/src/app/dispositivo/dispositivo.page.html
@@ -1,4 +1,8 @@
 <ion-card *ngIf="dispositivo">
+  <ion-button color="secondary" (click)="volverAlHome()">
+    Volver al Home
+  </ion-button>
+
   <ion-card color="light">
     <ion-card-header>
       <ion-card-title>Ubicación</ion-card-title>
