--- a/app-dam/src/frontend/dam/src/app/home/home.page.scss
+++ b/app-dam/src/frontend/dam/src/app/home/home.page.scss
@@ -25,3 +25,34 @@
 #container a {
   text-decoration: none;
 }
+ion-content {
+  --background: #f5f5f5;
+}
+
+ion-card {
+  margin: 12px;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+ion-card-title {
+  font-size: 1.4rem;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.botones {
+  display: flex;
+  justify-content: space-between;
+  gap: 8px;
+}
+
+ion-card-content p {
+  font-size: 1.1rem;
+  color: #666;
+}
+
+ion-button {
+  margin-top: 8px;
+  flex: 1;
+}
